# LPVcell-model

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  log
XPP-AUT_ver1.0.0/: PVcell_L10nM.ode  PVcell_L10nM_0.9gkb.ode  PVcell_L1nM.ode  PVcell_L1nM_0.7gkb.ode
XPP-AUT_ver1.0.0/premature_versions/: PVcell.ode  PVcell_20241004.ode  PVcell_20241009.ode  PVcell_20241009.ode.pars  PVcell_20241009.ode.pars2  PVcell_20241009.ode.pars3  check20241031_v1.ode
autom4te.cache/: output.1  requests  traces.0  traces.1
mkdata/: in.L10nM  in.L10nM_0.9gkb  in.L10uM  in.L1nM_0.7gkb  in.L30nM  in.control
src/: UHNpvc.c  UHNpvc.c.org  currents.c  data_out.c  eular.c  eventloop.c  exptable.c  ina.c  input_para.c  mem.c  syspara.h  system.c  temp.c  val_constants.c  win_out.c
